--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -2,3 +2,6 @@ requests==2.31.0
 selenium==4.15.0
 psycopg2-binary==2.9.9
 apache-airflow-providers-postgres==5.10.0
+pandas==2.1.1
+scikit-learn==1.3.2
+mlflow
