--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,49 +1,11 @@
-# Licensed to the Apache Software Foundation (ASF) under one
-# or more contributor license agreements.  See the NOTICE file
-# distributed with this work for additional information
-# regarding copyright ownership.  The ASF licenses this file
-# to you under the Apache License, Version 2.0 (the
-# "License"); you may not use this file except in compliance
-# with the License.  You may obtain a copy of the License at
-#
-#   http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing,
-# software distributed under the License is distributed on an
-# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-# KIND, either express or implied.  See the License for the
-# specific language governing permissions and limitations
-# under the License.
-#
+networks:
+  airflow_network:
+    driver: bridge
 
-# Basic Airflow cluster configuration for CeleryExecutor with Redis and PostgreSQL.
-#
-# WARNING: This configuration is for local development. Do not use it in a production deployment.
-#
-# This configuration supports basic configuration using environment variables or an .env file
-# The following variables are supported:
-#
-# AIRFLOW_IMAGE_NAME           - Docker image name used to run Airflow.
-#                                Default: apache/airflow:3.0.6
-# AIRFLOW_UID                  - User ID in Airflow containers
-#                                Default: 50000
-# AIRFLOW_PROJ_DIR             - Base path to which all the files will be volumed.
-#                                Default: .
-# Those configurations are useful mostly in case of standalone testing/running Airflow in test/try-out mode
-#
-# _AIRFLOW_WWW_USER_USERNAME   - Username for the administrator account (if requested).
-#                                Default: airflow
-# _AIRFLOW_WWW_USER_PASSWORD   - Password for the administrator account (if requested).
-#                                Default: airflow
-# _PIP_ADDITIONAL_REQUIREMENTS - Additional PIP requirements to add when starting all containers.
-#                                Use this option ONLY for quick checks. Installing requirements at container
-#                                startup is done EVERY TIME the service is started.
-#                                A better way is to build a custom image or extend the official image
-#                                as described in https://airflow.apache.org/docs/docker-stack/build.html.
-#                                Default: ''
-#
-# Feel free to modify this file to suit your needs.
----
+volumes:
+  postgres-db-volume:
+  mlruns:
+
 x-airflow-common:
   &airflow-common
   build:
@@ -64,19 +26,22 @@ x-airflow-common:
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
     AIRFLOW_CONFIG: '/opt/airflow/config/airflow.cfg'
 
-    # ✅ Logs uniquement en base de données
+    # Logs uniquement en DB
     AIRFLOW__LOGGING__REMOTE_LOGGING: 'false'
     AIRFLOW__LOGGING__REMOTE_BASE_LOG_FOLDER: ''
     AIRFLOW__LOGGING__TASK_LOGGER: 'airflow.utils.log.task_handler.DbTaskHandler'
     AIRFLOW__LOGGING__HANDLER: 'airflow.utils.log.task_handler.DbTaskHandler'
 
-    # ✅ Plugins
+    # Plugins et MLflow
     PYTHONPATH: "${AIRFLOW_PROJ_DIR:-.}/plugins"
+    MLFLOW_TRACKING_URI: http://mlflow:5000
 
   volumes:
     - ./airflow/dags:/opt/airflow/dags
     - ./airflow/config:/opt/airflow/config
     - ./airflow/plugins:/opt/airflow/plugins
+  networks:
+    - airflow_network
   user: "1000:0"
   depends_on:
     &airflow-common-depends-on
@@ -100,6 +65,8 @@ services:
       interval: 10s
       retries: 5
       start_period: 5s
+    networks:
+      - airflow_network
     restart: always
 
   redis:
@@ -112,6 +79,8 @@ services:
       timeout: 30s
       retries: 50
       start_period: 30s
+    networks:
+      - airflow_network
     restart: always
 
   airflow-apiserver:
@@ -128,75 +97,27 @@ services:
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
 
   airflow-scheduler:
     <<: *airflow-common
     command: scheduler
-    healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:8974/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
-
-  airflow-dag-processor:
-    <<: *airflow-common
-    command: dag-processor
-    healthcheck:
-      test: ["CMD-SHELL", 'airflow jobs check --job-type DagProcessorJob --hostname "$${HOSTNAME}"']
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
-    restart: always
-    depends_on:
-      <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
 
   airflow-worker:
     <<: *airflow-common
     command: celery worker
-    healthcheck:
-      test:
-        - "CMD-SHELL"
-        - 'celery --app airflow.providers.celery.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}" || celery --app airflow.executors.celery_executor.app inspect ping -d "celery@$${HOSTNAME}"'
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
-    environment:
-      <<: *airflow-common-env
-      DUMB_INIT_SETSID: "0"
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-apiserver:
-        condition: service_healthy
-      airflow-init:
-        condition: service_completed_successfully
 
   airflow-triggerer:
     <<: *airflow-common
     command: triggerer
-    healthcheck:
-      test: ["CMD-SHELL", 'airflow jobs check --job-type TriggererJob --hostname "$${HOSTNAME}"']
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
     restart: always
     depends_on:
       <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
 
   airflow-init:
     <<: *airflow-common
@@ -204,17 +125,11 @@ services:
     command:
       - -c
       - |
-        if [[ -z "1000" ]]; then
-          export AIRFLOW_UID=$$(id -u)
-        fi
         mkdir -p /opt/airflow/{dags,plugins,config,logs}
         /entrypoint airflow config list >/dev/null
         chown -R "1000:0" /opt/airflow/
-        chown -R "1000:0" /opt/airflow/{dags,plugins,config,logs}
-
         airflow connections import /opt/airflow/config/connections.yaml
         airflow variables import /opt/airflow/config/variables.json
-        
         airflow pools set selenium_pool 2 "Pool pour limiter les sessions Selenium"
     environment:
       <<: *airflow-common-env
@@ -222,56 +137,22 @@ services:
       _AIRFLOW_WWW_USER_CREATE: 'true'
       _AIRFLOW_WWW_USER_USERNAME: ${_AIRFLOW_WWW_USER_USERNAME:-airflow}
       _AIRFLOW_WWW_USER_PASSWORD: ${_AIRFLOW_WWW_USER_PASSWORD:-airflow}
-      _PIP_ADDITIONAL_REQUIREMENTS: ''
     user: "0:0"
 
-  airflow-cli:
-    <<: *airflow-common
-    profiles:
-      - debug
+  mlflow:
+    build:
+      context: ./mlflow
+    container_name: mlflow
+    ports:
+      - "5000:5000"
+    volumes:
+      - ./mlruns:/app/mlruns
+    networks:
+      - airflow_network
     environment:
-      <<: *airflow-common-env
-      CONNECTION_CHECK_MAX_COUNT: "0"
-    command:
-      - bash
-      - -c
-      - airflow
-    depends_on:
-      <<: *airflow-common-depends-on
-
-  flower:
-    <<: *airflow-common
-    command: celery flower
-    profiles:
-      - flower
-    ports:
-      - "5555:5555"
-    healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost:5555/"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 30s
+      MLFLOW_TRACKING_URI: http://mlflow:5000
     restart: always
-    depends_on:
-      <<: *airflow-common-depends-on
-      airflow-init:
-        condition: service_completed_successfully
 
-  selenium:
-    image: selenium/standalone-chrome:latest
-    container_name: selenium
-    ports:
-      - "4444:4444"
-    shm_size: 2gb
-    restart: always
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:4444/wd/hub/status || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 10s
-      
   api:
     build:
       context: .
@@ -285,12 +166,9 @@ services:
       POSTGRES_DB: airlines
       POSTGRES_USER: airflow
       POSTGRES_PASSWORD: airflow
-    volumes:
-      - ./airflow/plugins/clients:/opt/airflow/plugins/clients
     depends_on:
       postgres:
         condition: service_healthy
+    networks:
+      - airflow_network
     restart: always
-
-volumes:
-  postgres-db-volume:
