--- a/airflow/Dockerfile
+++ b/airflow/Dockerfile
@@ -1,8 +1,8 @@
 FROM apache/airflow:3.0.6-python3.11
 
-USER airflow
+COPY requirements.txt /tmp/requirements.txt
 
-COPY requirements.txt /requirements.txt
-RUN pip install --no-cache-dir -r /requirements.txt
+USER airflow
+RUN pip install --no-cache-dir -r /tmp/requirements.txt
 
 WORKDIR /opt/airflow
