--- a/mlflow/Dockerfile
+++ b/mlflow/Dockerfile
@@ -2,18 +2,25 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copier les dépendances MLflow
-COPY requirements.txt .
+# Installer les dépendances système minimales (souvent nécessaires pour sqlite/psycopg2)
+RUN apt-get update && apt-get install -y --no-install-recommends \
+	build-essential \
+	&& rm -rf /var/lib/apt/lists/*
 
-# Installer MLflow + dépendances éventuelles
+# Copier et installer les dépendances
+COPY requirements.txt .
 RUN pip install --upgrade pip \
 	&& pip install --no-cache-dir -r requirements.txt
 
-# Dossier pour artefacts
+# Créer le dossier pour les artefacts
 RUN mkdir -p /app/mlruns
 
-# Exposer le port
 EXPOSE 5000
 
-# Commande pour lancer MLflow
-CMD ["mlflow", "server", "--backend-store-uri", "sqlite:///mlflow.db", "--default-artifact-root", "/app/mlruns", "--host", "0.0.0.0", "--port", "5000"]
+# Commande optimisée
+CMD ["mlflow", "server", \
+	"--backend-store-uri", "sqlite:////app/mlruns/mlflow.db", \
+	"--default-artifact-root", "file:///app/mlruns", \
+	"--host", "0.0.0.0", \
+	"--port", "5000", \
+	"--workers", "1"]
