--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ networks:
 
 volumes:
   postgres-db-volume:
+  mlflow_artifacts:
 
 x-airflow-common:
   &airflow-common
@@ -29,6 +30,8 @@ x-airflow-common:
     AIRFLOW__LOGGING__TASK_LOGGER: 'airflow.utils.log.task_handler.DbTaskHandler'
     AIRFLOW__LOGGING__HANDLER: 'airflow.utils.log.task_handler.DbTaskHandler'
     PYTHONPATH: "${AIRFLOW_PROJ_DIR:-.}/plugins"
+    # Configuration MLflow pour que les DAGs sachent où envoyer les données
+    MLFLOW_TRACKING_URI: http://mlflow:5000
   volumes:
     - ./airflow/dags:/opt/airflow/dags
     - ./airflow/config:/opt/airflow/config
@@ -93,6 +96,31 @@ services:
       timeout: 10s
       retries: 5
       start_period: 30s
+
+  mlflow:
+      build:
+        context: ./mlflow
+        dockerfile: Dockerfile
+      container_name: mlflow
+      ports:
+        - "5000:5000"
+      environment:
+            - MLFLOW_BACKEND_STORE_URI=postgresql+psycopg2://airflow:airflow@postgres:5432/mlflow
+            - MLFLOW_ARTIFACT_ROOT=/mlflow/artifacts
+      volumes:
+        - mlflow_artifacts:/mlflow/artifacts
+      networks:
+        - airflow_network
+      depends_on:
+        postgres:
+          condition: service_healthy
+      command: >
+            mlflow server 
+            --backend-store-uri postgresql+psycopg2://airflow:airflow@postgres:5432/mlflow
+            --default-artifact-root /mlflow/artifacts 
+            --host 0.0.0.0 
+            --port 5000
+      restart: always
 
   airflow-apiserver:
     <<: *airflow-common
