--- a/airflow/requirements.txt
+++ b/airflow/requirements.txt
@@ -1,7 +1,13 @@
+# Scraping & API
 requests==2.31.0
 selenium==4.15.0
+
+# Database
 psycopg2-binary==2.9.9
-apache-airflow-providers-postgres==5.10.0
-pandas==2.1.1
+apache-airflow-providers-postgres>=5.10.0
+apache-airflow-providers-common-sql>=1.10.0
+
+# Data Science & ML
+pandas>=2.1.1
 scikit-learn==1.3.2
-mlflow==3.8.1
+mlflow>=2.10.0
