--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -1,4 +1,4 @@
-name: CI DST Airlines
+name: CI DST Airlines - Full Infra
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ main, master, refactoring ]
 
 jobs:
-  test-and-build:
+  infrastructure-quality:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -21,14 +21,35 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8
+          pip install flake8 pytest httpx
           if [ -f api/requirements.txt ]; then pip install -r api/requirements.txt; fi
+          if [ -f airflow/requirements.txt ]; then pip install -r airflow/requirements.txt; fi
 
-      - name: Lint with flake8
+      - name: Lint Python Code (API & Airflow)
         run: |
-          # Arrête le build s'il y a des erreurs de syntaxe Python
-          flake8 api --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 api airflow --count --select=E9,F63,F7,F82 --show-source --statistics
 
-      - name: Build Docker API Image
+      - name: Run API Unit Tests
         run: |
-          docker build -t dst_airlines_api:test -f api/Dockerfile .
+          export PYTHONPATH=$PYTHONPATH:$(pwd)
+          pytest api/tests/
+
+      - name: Validate Docker Compose Configuration
+        run: docker compose config -q
+
+      - name: Validate Prometheus Config
+        run: |
+          docker run --rm -v $(pwd)/prometheus:/etc/prometheus prom/prometheus:latest \
+          promtool check config /etc/prometheus/prometheus.yml
+
+      - name: Terraform Validate
+        run: |
+          cd terraform
+          terraform init -backend=false
+          terraform validate
+
+      - name: Build Multi-Services (Dry Run)
+        run: |
+          docker build -t dst_api:test ./api
+          docker build -t dst_airflow:test ./airflow
+          docker build -t dst_mlflow:test ./mlflow
