--- a/.github/workflows/main_ci.yml
+++ b/.github/workflows/main_ci.yml
@@ -7,10 +7,9 @@ on:
     branches: [ main, master, refactoring ]
 
 jobs:
-  infrastructure-quality:
+  # JOB 1 : Tests Python et Base de données
+  api-tests:
     runs-on: ubuntu-latest
-    
-    # On définit les services nécessaires aux tests
     services:
       postgres:
         image: postgres:15
@@ -20,28 +19,22 @@ jobs:
           POSTGRES_DB: db_test
         ports:
           - 5432:5432
-        # On attend que Postgres soit prêt avant de lancer les tests
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v3
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 pytest httpx
+          pip install pytest httpx
           if [ -f api/requirements.txt ]; then pip install -r api/requirements.txt; fi
-
       - name: Run API Unit Tests
         env:
           POSTGRES_HOST: localhost
@@ -52,3 +45,19 @@ jobs:
         run: |
           export PYTHONPATH=$PYTHONPATH:$(pwd)
           python -m pytest -v api/tests/test_api.py
+
+  # JOB 2 : Validation Terraform (Apparaîtra à côté du premier)
+  terraform-quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.0
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./terraform
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: ./terraform
