--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -9,3 +9,7 @@ scrape_configs:
   - job_name: 'fastapi-metrics'
     static_configs:
       - targets: ['api:8000']
+
+  - job_name: 'postgres'
+    static_configs:
+      - targets: ['postgres-exporter:9187']
