--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -2,6 +2,10 @@ global:
   scrape_interval: 15s
 
 scrape_configs:
+  - job_name: 'prometheus'
+    static_configs:
+      - targets: ['localhost:9090']
+
   - job_name: 'docker-metrics'
     static_configs:
       - targets: ['cadvisor:8080']
@@ -13,3 +17,8 @@ scrape_configs:
   - job_name: 'postgres'
     static_configs:
       - targets: ['postgres-exporter:9187']
+
+  - job_name: 'pushgateway'
+    honor_labels: true
+    static_configs:
+      - targets: ['pushgateway:9091']
